--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-    "github": {
-        "silent": true
-    },
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/"
-        }
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "dist" }
+      }
+    ],
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/assets/(.*)", "headers": { "cache-control": "public, max-age=31536000, immutable" } },
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
-}
+  }
